// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Well renders default well styling 1`] = `
<div
  className="c-callout "
  data-garden-id="notifications.well"
  data-garden-version="version"
/>
`;

exports[`Well renders floating styling correctly 1`] = `
<div
  className="c-callout c-callout--dialog "
  data-garden-id="notifications.well"
  data-garden-version="version"
/>
`;

exports[`Well renders recessed styling correctly 1`] = `
<div
  className="c-callout c-callout--recessed "
  data-garden-id="notifications.well"
  data-garden-version="version"
/>
`;

exports[`Well renders with RTL styling if applied 1`] = `
<div
  className="c-callout is-rtl "
  data-garden-id="notifications.well"
  data-garden-version="version"
/>
`;
